Fixed Errors and added frontend
