# docs/swagger.json
@@ -42,7 +42,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "string"
+                                            "$ref": "#/definitions/models.Msg"
                                         }
                                     }
                                 }
@@ -83,7 +83,10 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "string"
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/models.Msg"
+                                            }
                                         }
                                     }
                                 }
@@ -115,7 +118,10 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "string"
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/web.MsgList"
+                                            }
                                         }
                                     }
                                 }
@@ -156,7 +162,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "string"
+                                            "$ref": "#/definitions/models.Msg"
                                         }
                                     }
                                 }
@@ -197,7 +203,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "string"
+                                            "$ref": "#/definitions/models.Msg"
                                         }
                                     }
                                 }
@@ -488,6 +494,25 @@
                 }
             }
         },
+        "/pic/download/{uuid}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "pic"
+                ],
+                "summary": "Download pic",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "formData"
+                        }
+                    }
+                }
+            }
+        },
         "/pic/list/": {
             "get": {
                 "consumes": [
@@ -679,6 +704,44 @@
                 }
             }
         },
+        "models.Msg": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "deletedAt": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "isRecall": {
+                    "type": "boolean"
+                },
+                "receiveUserID": {
+                    "type": "integer"
+                },
+                "receiveVisible": {
+                    "type": "boolean"
+                },
+                "sendTime": {
+                    "type": "integer"
+                },
+                "sendUserID": {
+                    "type": "integer"
+                },
+                "sendVisible": {
+                    "type": "boolean"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Pic": {
             "type": "object",
             "properties": {
@@ -717,6 +780,20 @@
                 },
                 "status": {
                     "type": "integer"
+                }
+            }
+        },
+        "web.MsgList": {
+            "type": "object",
+            "properties": {
+                "latest_msg": {
+                    "type": "string"
+                },
+                "latest_msg_time": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
